<resources>
    <string name="app_name">Rat Patrol</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="admin_checkbox">AdminUser</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">
        "Contacts permissions are needed for providing email completions."
    </string>
    <string name="welcome_pic">rat drawing</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="error_duplicate_user">Username taken</string>
    <string name="error_invalid_username">Only alpha-numeric characters allowed
    </string>
    <string name="title_activity_rat_map">Map</string>
    <string name="key_prompt">Key: </string>
    <string name="date_prompt">Date: </string>
    <string name="time_prompt">Time: </string>
    <string name="address_prompt">Address: </string>
    <string name="city_prompt">City: </string>
    <string name="zipcode_prompt">Zipcode: </string>
    <string name="building_type_prompt">Building Type: </string>
    <string name="borough_prompt">"Borough: </string>
    <string name="latitude_prompt">Latitude:  </string>
    <string name="longitude_prompt">Longitude:  </string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="create_report">Create a report</string>
    <string name="view_archive">View Archive</string>
    <string name="view_sightings_map">View Sightings Map</string>
    <string name="filter_graph_archive">Filter Graph and Archive</string>
    <string name="view_sightings_graph">View Sightings Graph</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="beware_of_rats">Beware of Rats</string>

    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>

    <string name="filter">Filter</string>

    <string name="sample_email">rat.patrol@pizzarat.com</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_label">Search Address&#8230;</string>
    <string name="search_hint">Enter some text</string>
</resources>
