<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="72dp"
    tools:context="pizzarat.cs2340.gatech.edu.ratpatrol.DetailedReportViewActivity">

    <EditText
        android:id="@+id/keyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/addressTextView"
        android:layout_marginTop="35dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:text="@string/key_prompt"/>

    <EditText
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/keyTextView"
        android:layout_below="@+id/keyTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none|date"
        android:linksClickable="false"
        android:text="@string/date_prompt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <EditText
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dateTextView"
        android:layout_below="@+id/dateTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:text="@string/time_prompt"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="40dp"/>

    <EditText
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/timeTextView"
        android:layout_marginStart="37dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:singleLine="false"
        android:text="@string/address_prompt"
        android:textAlignment="viewStart"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="116dp"/>

    <EditText
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/addressTextView"
        android:layout_below="@+id/addressTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:text="@string/city_prompt"/>

    <EditText
        android:id="@+id/zipcodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cityTextView"
        android:layout_below="@+id/cityTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:text="@string/zipcode_prompt"/>

    <EditText
        android:id="@+id/buildingTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/boroughTextView"
        android:layout_below="@+id/boroughTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:singleLine="false"
        android:text="@string/building_type_prompt"/>

    <EditText
        android:id="@+id/boroughTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/zipcodeTextView"
        android:layout_below="@+id/zipcodeTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:text="@string/borough_prompt"/>

    <EditText
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buildingTypeTextView"
        android:layout_below="@+id/buildingTypeTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:maxLength="20"
        android:text="@string/latitude_prompt"/>

    <EditText
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/latitudeTextView"
        android:layout_below="@+id/latitudeTextView"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:linksClickable="false"
        android:maxLength="20"
        android:text="@string/longitude_prompt"/>

</RelativeLayout>

